...
        android:onClick="leftClicked"
        android:text="@string/left_button_text"
        app:layout_constraintBottom_toTopOf="@+id/options_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="searchClicked"
...
        android:text="@string/image_info_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image_view" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
...
